Separate database dependent modules